--- a/src/main/metadata/classes/UtilCampaignTaskGenerationByAccount.cls
+++ b/src/main/metadata/classes/UtilCampaignTaskGenerationByAccount.cls
@@ -20,9 +20,12 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
     private MisunderstoodTaskGeneration mis;
     public List<Campaign> cpUpdateList = new List<Campaign>(); 
      public List<User> genericUserQueryList = new List<User>(); 
-    public List<User> obuserList = new List<User>(); 
+    public List<GroupMember> obuserList = new List<GroupMember>();
+    public Group CCCQueue;
     public User intUser;
     public User fulfillmentSpUser;
+    public User usr ;
+    public string alias=System.Label.Task_Assigned_User;
     
     private ID taskRecordTypeId;
     private String strSMS = 'SMS';
@@ -41,10 +44,12 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
     
     global Map<String, Schema.RecordTypeInfo> taskRecordTypeMap;
     
-    global UtilCampaignTaskGenerationByAccount(List<Campaign> cpList, Id nexJobId) 
-    {
-        //obuserList = [select id, name from User where UserRole.Name = 'OB Supervisor' and IsActive = true LIMIT 1];
-        intUser = [SELECT Id FROM User WHERE Profile.Name = 'IntegrationAPI' AND isActive = true  LIMIT 1];
+    global UtilCampaignTaskGenerationByAccount(List<Campaign> cpList) 
+    {    
+        usr = [Select Id, Name,Alias from user where Alias =:alias limit 1]; 
+        CCCQueue = [Select Id from Group where Name = 'CCC Manager KR' and Type = 'Queue'];
+        obuserList = [select UserOrGroupId from GroupMember where GroupId =:CCCQueue.Id];
+        //intUser = [SELECT Id FROM User WHERE Profile.Name = 'IntegrationAPI' AND isActive = true  LIMIT 1];
         //fulfillmentSpUser = [SELECT Id FROM User WHERE UserRole.Name like '%Fulfillment Specialist%' AND isActive = true LIMIT 1];
 
         for(Campaign cp : cpList) {
@@ -54,9 +59,9 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
 
         // Initiate Mis
         mis = new MisunderstoodTaskGeneration(cpList, false);
-
+system.debug('&******************'+cpList);
         // Batch Job ID
-        jobId = nexJobId;
+        
     }
     
     global Database.QueryLocator start(Database.BatchableContext BC){
@@ -73,6 +78,7 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
     } 
     
     global void execute(Database.BatchableContext BC, List<CampaignMember> scope) {
+    system.debug('&*********scope'+scope);
         List<Task> taskList = new List<Task>();
         taskRecordTypeMap = Schema.SObjectType.Task.getRecordTypeInfosByName();
         Savepoint sp = Database.setSavepoint();
@@ -111,6 +117,7 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
             // So if it is caused this reason, we need to append the campaign execution to 
             // task UniqueCampaignGenerateTask__c
             Database.SaveResult[] srs = Database.insert(taskList, false);
+            system.debug('srs>>>' + srs);
             mis.processMisunderstoodTasks(srs, taskList);
         } 
         catch(exception ex) {
@@ -142,11 +149,10 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
         }
 
         if(cpm.Campaign.Execution_Type__c == strOBCall) {        
-          //  for(user u : obuserList) {
+            //for(GroupMember u : obuserList) {
                 taskList.add(new Task(
                     Subject= strOBCall, 
                     RecordTypeId = taskRecordTypeMap.get('OB Task').getRecordTypeId(),
-                   // OwnerId = u.Id,
                     Status = strOpenStatus,
                     DUP_Number__c = (cpm.ContactId == null ? ' ' : cpm.Contact.DUP_Number__c), 
                     WhoId = (cpm.ContactId == null ? cpm.LeadId : cpm.ContactId),
@@ -156,14 +162,15 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
                     Flow_URL__c = cpm.Campaign.Flow_URL__c,
                     Activity_Status__c = 'not started',
                     ActivityDate = date.today(),
-                    UniqueCampaignGenerateTask__c = uniqueTaskField)
-                );
-          //  }
+                    UniqueCampaignGenerateTask__c = uniqueTaskField,
+                    OwnerId= usr.Id));
+            
+            //}
         } else if (cpm.Campaign.Execution_Type__c == strSMS && cpm.Contact.MobilePhone != null && cpm.Contact.MobilePhone != '') {
             taskList.add(new Task(
                 Subject= strSMS, 
                 RecordTypeId = taskRecordTypeMap.get('SMS').getRecordTypeId(),
-                OwnerId = intUser.Id,
+                OwnerId = usr.Id,
                 Activity_Status__c = strVeriStatus,
                 Phone__c = cpm.Contact.MobilePhone,
                 WhoId = (cpm.ContactId == null ? cpm.LeadId : cpm.ContactId),
@@ -179,7 +186,7 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
             taskList.add(new Task(
                 Subject= mms, 
                 RecordTypeId = taskRecordTypeMap.get(mms).getRecordTypeId(),
-                OwnerId = intUser.Id,
+                OwnerId = usr.Id,
                 Activity_Status__c = strVeriStatus,
                 Phone__c = cpm.Contact.MobilePhone,
                 WhoId = (cpm.ContactId == null ? cpm.LeadId : cpm.ContactId),
@@ -195,7 +202,7 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
             taskList.add(new Task(
                 Subject= streDM, 
                 RecordTypeId = taskRecordTypeMap.get('eDM').getRecordTypeId(),
-                OwnerId = intUser.Id,
+                OwnerId = usr.Id,
                 Status = strCloseStatus,
                 Campaign_eDM_Template_Subject__c = cpm.Campaign.Template__r.Subject__c,
                 Campaign_eDM_Template_ID__c = cpm.Campaign.Template__r.Template_ID__c,                                 
@@ -212,7 +219,7 @@ global Class UtilCampaignTaskGenerationByAccount implements Database.Batchable<s
             taskList.add(new Task(
                 Subject = strDM, 
                 RecordTypeId = taskRecordTypeMap.get('DM').getRecordTypeId(),
-                //OwnerId = fulfillmentSpUser.Id,
+                OwnerId = usr.Id,
                 Status = strOpenStatus,
                 WhoId = (cpm.ContactId == null ? cpm.LeadId : cpm.ContactId),
                 WhatId = (cpm.ContactId == null ? null : cpm.CampaignId),
